# rtt-rrct-typekit

./: .gitignore  CMakeLists.txt  README.md
src/: AngularVelocity.cpp  AngularVelocity.hpp  CMakeLists.txt  CallTraceSample.cpp  CallTraceSample.hpp  Forces.cpp  Forces.hpp  IMU.cpp  IMU.hpp  JointAccelerations.cpp  JointAccelerations.hpp  JointAngles.cpp  JointAngles.hpp  JointImpedance.cpp  JointImpedance.hpp  JointJerks.cpp  JointJerks.hpp  JointState.cpp  JointState.hpp  JointTorques.cpp  JointTorques.hpp  JointVelocities.cpp  JointVelocities.hpp  LinearAcceleration.cpp  LinearAcceleration.hpp  LinearVelocities.cpp  LinearVelocities.hpp  MatrixDouble.cpp  MatrixDouble.hpp  Odometry.cpp  Odometry.hpp  Pose.cpp  Pose.hpp  Rotation.cpp  Rotation.hpp  Torques.cpp  Torques.hpp  Translation.cpp  Translation.hpp  Twist.cpp  (+16 more)
src/rrct/: JointAngles.cpp  JointAngles.hpp
src/rrct/dynamics/: JointImpedance.cpp  JointImpedance.hpp  JointTorques.cpp  JointTorques.hpp
src/rrct/kinematics/: JointAccelerations.cpp  JointAccelerations.hpp  JointAngles.cpp  JointAngles.hpp  JointVelocities.cpp  JointVelocities.hpp
